# spidx

./: CMakeLists.txt  README.md
include/: spx_client.h  spx_common.h  spx_error.h  spx_hash.h  spx_hash_domain.h  spx_hash_mod.h  spx_server.h  spx_server_inner.h  types.h
src/: bbxtool.h  spidx.h  spx_client.c  spx_client.h  spx_common.h  spx_hash.c  spx_hash_domain.c  spx_hash_mod.c  spx_inner.h  spx_server.c  spx_server.h  spx_server_bak.c  spx_server_inner.c  types.h
src/hashmodules/: hash_mod.h  hilbertsfc.c  nskeymod.c  sfc.c
src/hashmodules/hilbert/: hilbert.c  hilbert.h
src/utils/: bbxtool.h  encode.h
test/: CMakeLists.txt  test_api_init.c  test_bbxtool.c  test_client.c  test_client_2d.c  test_encode.c  test_hash.c  test_hash_domain.c  test_hash_mod.c  test_nons_key.c  test_server.c  test_server_init.c  test_server_inner.c
